# Velox

./: .gitignore  CMakeLists.txt  README.md
cmake/: cef_import.cmake  compiler_flags.cmake
config/: settings.json
extensions/sample-hello/: background.js  content.js  manifest.json
resources/: velox.rc
scripts/: package_release.ps1
src/app/: app_bootstrap.cc  app_bootstrap.h  command_line.cc  command_line.h  main_win.cc  runtime_profile.cc  runtime_profile.h  site_predictor.cc  site_predictor.h
src/browser/: browser_controller.cc  browser_controller.h  browser_window.cc  browser_window.h  win32_controls.cc  win32_controls.h
src/cef/: browser_policy.cc  browser_policy.h  extension_support.cc  extension_support.h  render_metrics_bridge.cc  render_metrics_bridge.h  request_context_factory.cc  request_context_factory.h  velox_cef_app.cc  velox_cef_app.h  velox_client.cc  velox_client.h
src/platform/win/: cache_maintenance.cc  cache_maintenance.h  crash_handler.cc  crash_handler.h  file_utils.cc  file_utils.h  logger.cc  logger.h
src/profiling/: memory_sampler.cc  memory_sampler.h  metrics_recorder.cc  metrics_recorder.h  perf_timer.cc  perf_timer.h
src/settings/: app_settings.cc  app_settings.h  settings_loader.cc  settings_loader.h
tests/: metrics_tests.cc  settings_tests.cc  smoke_launch.ps1
